--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,3 +1,49 @@
+@book{lax-peter,
+  title   = "Hyperbolic systems of conservation laws and the mathematical theory of shock waves",
+  author  = "P D Lax",
+  year    = "1973",
+  publisher = "Society for Industrial and Applied Mathematics",
+}
+
+@article{harten-hyman,
+  title   = "On finite‐difference approximations and entropy conditions for shocks",
+  author  = "A Harten and J M Hyman and P D Lax and B Keyfitz",
+  journal = "Communications on pure applied mathematics",
+  volume  = "29",
+  pages   = "292-322",
+  year    = "1976",
+}
+
+@article{lf,
+  title   = "Weak solutions of nonlinear hyperbolic equations and their numerical computation",
+  author  = "P D Lax",
+  journal = "Communications on pure applied mathematics",
+  volume  = "7",
+  issue = "1",
+  pages   = "159-193",
+  year    = "1954",
+}
+
+@article{majda-andrew,
+  title   = "Propagation of error into regions of smoothness for accurate difference approximations to hyperbolic equations",
+  author  = "A Harten and J M Hyman and P D Lax and B Keyfitz",
+  journal = "Communications on pure applied mathematics",
+  volume  = "30",
+  issue = "6",
+  pages   = "671-705",
+  year    = "1977",
+}
+
+@article{banks-jeffrey,
+  title   = "On sub-linear convergence for linearly degenerate waves in capturing schemes",
+  author  = "J W Banks and T Aslam and W J Rider",
+  journal = "Journal of Computational Physics",
+  volume  = "227",
+  issue = "14",
+  pages   = "6985--7002",
+  year    = "2008",
+}
+
 @article{valentin,
   title   = "Implementation of the entropy viscosity method with the discontinuous Galerkin method",
   author  = "V Zingan and J L Guermond and J Morel and B Popov",
