--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -14,6 +14,23 @@
   year    = "1976",
 }
 
+@article{fct-zalesak,
+  title   = "Introduction to Flux-Corrected Transport. I. SHASTA, a fluid transport algorithm that works",
+  author  = "S T Zalesak",
+  journal = "Communications on pure applied mathematics",
+  volume  = "135",
+  issue = "2",
+  pages   = "170-171",
+  year    = "1997",
+}
+
+@book{fct-kuzmin-lohner,
+  title   = "Flux-Corrected Transport: Principles, Algorithms and Applications",
+  author  = "D Kuzmin and R Lohner and S Turek",
+  publisher = "Springler, Scientific Computation",
+  year    = "2005",
+}
+
 @article{lf,
   title   = "Weak solutions of nonlinear hyperbolic equations and their numerical computation",
   author  = "P D Lax",
