--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -5,6 +5,15 @@
   publisher = "Society for Industrial and Applied Mathematics",
 }
 
+@article{neumann,
+  title   = "A method for the numerical calculations of hydrodynamical shocks",
+  author  = "J von Neumann and R D Richtmyer",
+  journal = "Journal of Applied Physics",
+  volume  = "21",
+  pages   = "232-237",
+  year    = "1950",
+}
+
 @article{harten-hyman,
   title   = "On finite‐difference approximations and entropy conditions for shocks",
   author  = "A Harten and J M Hyman and P D Lax and B Keyfitz",
